# 3dp-cad

./: .gitignore  PROGRESS.md  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh  status_check.sh
src/threedp/: __init__.py  config.py  constants.py  helpers.py  logging_config.py  metadata.py  model_store.py  server.py
src/threedp/tools/: __init__.py  analysis.py  community.py  core.py  export_2d.py  features.py  parametric.py  transforms.py
tests/: __init__.py  test_config.py  test_constants.py  test_export_2d.py  test_helpers.py  test_logging.py  test_model_store.py
